--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get:
+  http:
   firebase_core: ^2.3.0
-  firebase_auth: ^4.1.4  
+  firebase_auth: ^4.1.4
+  provider: ^6.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
